<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RoutinesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routinesRecyclerView"
        android:layout_width="139dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stretchesRecyclerView"
        android:layout_width="220dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/startRoutine"
        android:layout_width="165dp"
        android:layout_height="91dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Start"
        android:backgroundTint="#9948EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/routineCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:textColor="#535353"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/routinesRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/routinesRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/routinesRecyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/routineStretchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stretch"
        android:textColor="#535353"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/routineCategoryTextView"
        app:layout_constraintEnd_toEndOf="@+id/stretchesRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/stretchesRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/routineCategoryTextView" />

    <Button
        android:id="@+id/routineActivityBackButton"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="#9948EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startRoutine"
        app:layout_constraintVertical_bias="0.263" />
</androidx.constraintlayout.widget.ConstraintLayout>